# facial-recognition

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md
src/: cascade.rs  classifier.rs  cli.yml  constants.rs  images.rs  main.rs  primitives.rs  recognize.yml  strong_classifier.rs  train.py  train.yml  weak_classifier.rs
