[package]
name = "object-detection"
description = "An implementation of the viola-jones object detection algorithm"
version = "0.1.0"
authors = ["mwg2202 <mwg2202@yahoo.com>"]
edition = "2018"
repository = "https://github.com/mwg2202/object-detection"
license = "MIT"
keywords = ["object", "detection", "viola-jones", "ai"]
categories = ["computer-vision"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
image = "0.23.14"
clap = {version = "2.33.3", features = ["yaml"]}
indicatif = "0.15.0"
num = "0.4.0"
rand = "0.8.3"
rayon = "1.5.0"
